# sing-box-subscribe

./: .gitignore  main.py  providers.json  pyproject.toml  query.py  subscribes.json.bak
config_template/: android_tun.json  config_template_groups_rule_set_tun.json
